tests/NormalTests/paczka1/fuzzy1/46140054.err
Error in line 4: wCn A644 97,1
Error in line 5: SAth4w A644 9,8
Error in line 7: FnOe4hsRyFa A644 41,2
Error in line 8: wCn A621 26,1
Error in line 13: A734 A428 44,6
Error in line 27: A734 A734 233,73
Error in line 25: wCn A644 9,9
